--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
 <!DOCTYPE html>
 <html lang="ko">
+    <style>
+    body {
+        background-color: #F3E9D2; /* 배경색 */
+        font-family: '나눔고딕', sans-serif; /* 폰트 */
+    }
+    h2 {
+        color: #5A4224; /* 제목 색상 */
+    }
+    input, button {
+        font-family: '나눔고딕', sans-serif;
+        border-radius: 5px; /* 버튼과 입력 필드의 모서리 둥글게 */
+    }
+    button {
+        background-color: #A1743B; /* 버튼 배경색 */
+        color: white; /* 버튼 텍스트 색상 */
+        padding: 10px 20px; /* 버튼 내부 여백 */
+        border: none; /* 버튼 테두리 제거 */
+        cursor: pointer; /* 마우스 오버시 커서 변경 */
+    }
+    button:hover {
+        background-color: #855F29; /* 버튼 호버 색상 */
+    }
+</style>
 <head>
     <meta charset="UTF-8">
     <title>루바 계산기</title>
