--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <span class="unit">mm</span>
         <button onclick="calculate()">계산하기</button>
         <p id="resultX">필요한 루바: </p>
+        <p id="resultY">남는 부분: </p> <!-- 이전 코드에서 누락된 것 같습니다. -->
         <p id="filmAdvice"></p> <!-- 인테리어 필름 관련 조언 -->
         <p id="moldingResult">마감 몰딩 필요 개수: </p>
         <p id="cuttingAdvice"></p> <!-- 마감 몰딩 재단 관련 조언 -->
