--- a/index.html
+++ b/index.html
@@ -7,53 +7,50 @@
     <style>
         body {
             font-family: 'Hi Melody', cursive;
-            text-align: center; /* 모든 내용을 가운데 정렬 */
-            background-color: #F6F6EA; /* 배경색 설정 */
-            font-size: 16px; /* 기본 폰트 사이즈 */
+            text-align: center;
+            background-color: #F6F6EA;
+            font-size: 16px;
         }
         #container {
             display: inline-block;
-            text-align: left; /* 입력란과 버튼은 왼쪽 정렬로 보이도록 조정 */
+            text-align: left;
             margin-top: 20px;
         }
         .label, .unit, button, input {
-            font-size: 1.5em; /* 폰트 사이즈 3배로 증가 */
+            font-size: 1.5em;
         }
         .highlight {
             display: inline;
-            box-shadow: inset 0 -10px 0 #F3DEAF; /* 텍스트 하이라이트 효과 */
+            box-shadow: inset 0 -10px 0 #F3DEAF;
         }
         button {
-            background-color: #F3DEAF; /* 버튼 배경색 */
-            border: none; /* 버튼 테두리 제거 */
-            padding: 10px 20px; /* 버튼 내부 여백 */
-            cursor: pointer; /* 마우스 오버 시 커서 변경 */
-            border-radius: 15px; /* 버튼 모서리 둥글게 */
+            background-color: #F3DEAF;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            border-radius: 15px;
         }
         button:hover {
-            opacity: 0.9; /* 마우스 오버 시 버튼 투명도 변경 */
+            opacity: 0.9;
         }
         #resultX, #resultY, #moldingResult, #cuttingAdvice, #filmAdvice, #exactSizeAdvice {
-            display: none; /* 결과 부분 초기 상태에서 숨김 */
+            display: none;
         }
     </style>
     <script>
         function calculate() {
             var width = document.getElementById('widthInput').value;
+            var x = Math.floor(width / 80);
+            var y = width % 80;
+            var molding = Math.ceil(width / 1200);
+            var remainder = width % 1200;
 
-            // 필요한 루바 수 계산
-            var x = Math.floor(width / 80); 
-            var y = width % 80; // 남는 부분
-            var molding = Math.ceil(width / 1200); // 마감 몰딩 필요 개수
-            var remainder = width % 1200; // 1200으로 나눈 나머지
-
-            // 결과 표시
             document.getElementById('resultX').style.display = "block";
             document.getElementById('resultY').style.display = "block";
             document.getElementById('moldingResult').style.display = "block";
             document.getElementById('resultX').innerText = "필요한 루바: " + x + "개";
-            
-            // 루바 나머지 처리
+            document.getElementById('resultY').innerText = "남는 부분: " + y + "mm"; // 추가된 부분
+
             if (y == 0) {
                 document.getElementById('filmAdvice').style.display = "block";
                 document.getElementById('filmAdvice').innerText = "길이가 딱 맞아 떨어져, 인테리어 필름은 필요 없습니다.:)\n정확한 사이즈를 측정했는지 꼭 확인해주세요";
@@ -64,7 +61,6 @@
 
             document.getElementById('moldingResult').innerText = "마감 몰딩 필요 개수 : " + molding + "개";
 
-            // 마감 몰딩에 대한 추가 메시지
             if (remainder == 0) {
                 document.getElementById('cuttingAdvice').style.display = "block";
                 document.getElementById('cuttingAdvice').innerText = "길이가 딱 맞아 떨어져, 재단은 필요 없습니다.:)";
@@ -82,10 +78,10 @@
         <span class="unit">mm</span>
         <button onclick="calculate()">계산하기</button>
         <p id="resultX">필요한 루바: </p>
-        <p id="resultY">남는 부분: </p> <!-- 이전 코드에서 누락된 것 같습니다. -->
-        <p id="filmAdvice"></p> <!-- 인테리어 필름 관련 조언 -->
+        <p id="resultY">남는 부분: </p> <!-- 추가된 부분 -->
+        <p id="filmAdvice"></p>
         <p id="moldingResult">마감 몰딩 필요 개수: </p>
-        <p id="cuttingAdvice"></p> <!-- 마감 몰딩 재단 관련 조언 -->
+        <p id="cuttingAdvice"></p>
     </div>
 </body>
 </html>
