--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
             var width = document.getElementById('widthInput').value;
         drawCanvas(width);
 }
+document.getElementById('widthInput').addEventListener('input', function() {
+        var value = this.value;
+        if (value.length > 6) {
+            this.value = value.slice(0, 6); // 최대 6자리 숫자만 허용
+        }
+    });
 </script>
 
 </body>
