--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 document.getElementById('filmAdvice').className = "result";
             } else {
                 document.getElementById('filmAdvice').style.display = "block";
-                document.getElementById('filmAdvice').innerText = ""남는 부분 " + film + "mm에 붙일 인테리어 필름이 필요합니다.";
+                document.getElementById('filmAdvice').innerText = "남는 부분 " + film + "mm에 붙일 인테리어 필름이 필요합니다.";
                 document.getElementById('filmAdvice').className = "result";
             }
 
