--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-<!--    <script src="draw.js"></script>   -->
+    <script src="draw.js"></script>
     <script>
         function calculate() {
             var width = document.getElementById('widthInput').value;
