--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <span class="unit">mm</span>
             <br>
             <button onclick="calculate()">계산하기</button>
-            <br><hr>
+             <div class="hr-sect">계산결과</div>
+            <br>
             <p id="resultX" class="result"></p>
             <p id="filmAdvice" class="result"></p>
             <p id="moldingResult" class="result"></p>
