--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 document.getElementById('cuttingAdvice').className = "result";
             } else {
                 document.getElementById('cuttingAdvice').style.display = "block";
-                document.getElementById('cuttingAdvice').innerHTML = "이 중 하나는 " + remainder + "mm 길이로 재단을 해야 합니다. "<br>"맞춤 재단 키트를 추천드려요:)";
+                document.getElementById('cuttingAdvice').innerHTML = "이 중 하나는 " + remainder + "mm 길이로 재단을 해야 합니다. <br>맞춤 재단 키트를 추천드려요:)";
                 document.getElementById('cuttingAdvice').className = "result";
             }
 
