--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
            
 
             
-            document.getElementById('moldingResult').innerText = '<br>마감 몰딩 필요 개수: " + molding + "개";
+            document.getElementById('moldingResult').innerText = "마감 몰딩 필요 개수: " + molding + "개";
             document.getElementById('moldingResult').className = "result";
 
             if (remainder === 0) {
