--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
              <div class="hr-sect">계산결과</div>
             <br>
             <p id="resultX" class="result"></p>
-            <p id="filmAdvice" class="result"></p>
+            <p id="filmAdvice" class="result"></p><br>
             <p id="moldingResult" class="result"></p>
             <p id="cuttingAdvice" class="result"></p>
         </div>
